--- a/trunk/Component/.classpath
+++ b/trunk/Component/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="/HAS/tomcat7/lib/apache-activemq-5.4.2/activemq-all-5.4.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
