messaging base... HAS inits a listener attached to the test message queue, you can use component to send messages to this queue, the listener will be triggered and we display a message on the server console.

--- a/HAS/.classpath
+++ b/HAS/.classpath
@@ -15,5 +15,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="tomcat7/lib/quartz-all-2.0.0.jar"/>
+	<classpathentry kind="lib" path="tomcat7/lib/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
